@@ -1,6 +1,5 @@
 --------Para próxima versión:
  
- 
 -Al pulsar en footer cuando está con real tape, que se ponga cinta en pausa
 
 -Opción im0 parece que solo es en mostek. Y no en nec
@@ -26,6 +25,7 @@ https://bintray.com/vszakats/generic/download_file?file_path=openssl-1.1.1d-win3
 copiar libcrypto-1_1.dll y libssl-1_1.dll en ruta de ZEsarUX exe
 Incluir pthreadGC-3.DLL. Estará en carpeta bin de mingw
 Funciona ssl en windows ok!
+->agregado de momento en configure
 
 
 -En overscan con curses salen colores con ??? a la derecha fuera de pantalla 
@@ -35,11 +35,6 @@ Funciona ssl en windows ok!
 -Impresión caracteres en consola texto nunca debe mostrar el 127. Es Delete
 Quizá mostrar C en caso de 127
 
-
--Opción para que ocr no busque en caracteres que diga 23606/7. Que lo haga solo en la de la rom y listo
-Esto evitaria en teoría que por ejemplo en great escape salen caracteres paréntesis a veces en el escenario 
-->falta setting command line y grabado config
-Y tooltip y texto ayuda
 
 -Opción para formato de grabación de autosave snap
 
